<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="title_scores_app">SCORES APP</string>
    <string name="title_library_app">LIBRARY APP</string>
    <string name="title_build_it_bigger">BUILD IT BIGGER</string>
    <string name="title_xyz_reader">XYZ READER</string>
    <string name="title_capstone">CAPSTONE: MY OWN APP</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
</resources>
