<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/BasicText"
        android:text="@string/my_nanodegree_apps" />

    <Button
        android:id="@+id/spotifyButton"
        style="@style/BlueButton"
        android:text="@string/title_spotify_streamer"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/scoresButton"
        style="@style/BlueButton"
        android:text="@string/title_scores_app" />

    <Button
        android:id="@+id/libraryButton"
        style="@style/BlueButton"
        android:text="@string/title_library_app" />

    <Button
        android:id="@+id/buildItBiggerButton"
        style="@style/BlueButton"
        android:text="@string/title_build_it_bigger" />

    <Button
        android:id="@+id/xyzReaderButton"
        style="@style/BlueButton"
        android:text="@string/title_xyz_reader" />

    <Button
        android:id="@+id/capstoneButton"
        style="@style/RedButton"
        android:text="@string/title_capstone" />

</LinearLayout>
